# libsevenzip

./: .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  CODE_REVIEW.md  DOCUMENTATION.md  Makefile  README.md  TODO  makefile  makefile.vc  sevenzip.cpp  sevenzip.h  sevenzip_compat.h  sevenzip_impl.cpp  sevenzip_impl.h
.github/: CI.md  CI_SETUP_SUMMARY.md  INDEX.md  QUICK_REFERENCE.md  SETUP_CHECKLIST.md  TROUBLESHOOTING.md
.github/workflows/: ci.yml  nightly.yml  quick-check.yml
_codeql_build_dir/: Makefile  compress_example  extract_example  libsevenzip.so.1  libsevenzip.so.1.0.0  sevenzipConfig.cmake
cmake/: sevenzipConfig.cmake.in
examples/: compress_example.cpp  example.cpp  example0.cpp  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp  example7.cpp  example8.cpp  example9.cpp  exampleH.cpp  extract_example.cpp
include/libsevenzip/: archive.hpp  exceptions.hpp  libsevenzip.hpp  types.hpp
src/: archive.cpp  exceptions.cpp  libsevenzip.cpp
tests/: test_iarchive.cpp  test_lib.cpp  test_oarchive.cpp  tests.cpp
